Minor changes to UI to avoid text overflows.